# pyfavor

./: .gitignore  README.md  convert_swde_table.ipynb  convert_swde_table_test.ipynb  create_efavor_input_swde_28_11_24.ipynb  create_efavor_inputs_demo.ipynb  requirements.txt  setup.cfg  setup.py
efavor/: e_FAVOR_test.xls
efavor/swde/: swde_test.xlsx
efavor/swde_case_study/: README.md  e_FAVOR_St_Servais_SWDE_15.xlsx
efavor/swde_case_study/bul_data/: No_of_logs_at_times.xlsx  pressure_measurements.xlsx
efavor/swde_case_study/outputs/: README.md  logger_file.xlsx  pressure_measurements_filled.xlsx
networks/: St_Servais_Centre_leak.inp  test.inp
pyfavor/: __main__.py  cli.py  config.yaml  create.py  main.py  simulate.py  utils.py
