[metadata]
license = GPL3.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GPL3
    Operating System :: OS Independent
    Environment :: Console
    Natural Language :: English
    Topic :: Scientific/Engineering
keywords = burtst detection, active detection, water distibution networks

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    pandas==2.0.1
    wntr==1.0.0
    xlwt==1.3.0
    click==8.1.3
    click-plugins==1.1.1
    PyYAML==6.0
    click
    rich-click

[options.extras_require]
dev =
    pytest

lint =
    flake8
    pylint

docs =
    myst-parser
    sphinx_rtd_theme

[options.entry_points]
console_scripts=
    run-pyfavor=pyfavor.cli:main

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = False
pretty = True
show_error_codes = True

[pydocstyle]
inherit = false
ignore = D100, D203, D405, D212, D213
match = .*\.py

[flake8]
max-line-length = 140
exclude = .tox,.eggs,ci/templates,build,dist

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = reemission
default_section = THIRDPARTY
forced_separate = test_reemission
skip = .tox,.eggs,ci/templates,build,dist
